# hapic

./: README.md
hapic/: Cargo.toml
hapic/src/: lib.rs  test.rs  transport.rs
hapic/src/transport/: mod.rs  retry.rs
test-api-server/: Cargo.toml
test-api-server/src/: main.rs
